--- a/assets/css/_widgets/button.less
+++ b/assets/css/_widgets/button.less
@@ -8,6 +8,7 @@
   display: inline-block;
   font-size: var(--font-size);
   padding: var(--padding-v) var(--padding-h);
+  text-align: center;
   transition: background-color 0.3s;
   white-space: nowrap;
 
